# social-networking-app

./: .gitattributes  .gitignore  README.md  environment.yml  pixi.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: logger.ini
logs/: social_networking.log.example
src/social_network/: __init__.py  social_networking.py
src/sr_sw_dev/: __init__.py  models.py  paths.py  social_networking.py
tests/: __init__.py  test_application.py  test_command_processor.py  test_models.py  test_post.py  test_social_network.py  test_user.py
